# LLVM

./: LLVM Plan
AnalysisPass/: CMakeLists.txt  SimpleAnalysis.cpp  hello.ll
Basics/: Readme.txt  hello_world.cpp  hello_world.ll
ConstantFoldingPass/: .ConstantFolding.cpp.swo  .ConstantFolding.cpp.swp  .hello.ll.swp  CMakeLists.txt  ConstantFolding.cpp  Readme.txt  hello.ll
LLVM_ch1/: Readme.txt
